--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -34,5 +34,6 @@
     "seconds": "seconds",
     "pageSpanish": "Page in Spanish",
     "pageEnglish": "Page in English",
-    "pageValencia": "Page in Valencià"
+    "pageValencia": "Page in Valencià",
+    "language": "Language"
 }
