--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -34,5 +34,6 @@
     "seconds": "segundos",
     "pageSpanish": "Página en Castellano",
     "pageEnglish": "Página en Inglés",
-    "pageValencia": "Página en Valenciano"
+    "pageValencia": "Página en Valenciano",
+    "language": "Idioma"
 }
