--- a/src/lang/va.json
+++ b/src/lang/va.json
@@ -34,5 +34,6 @@
     "seconds": "segons",
     "pageSpanish": "Pàgina en Castellà",
     "pageEnglish": "Pàgina en Inglés",
-    "pageValencia": "Pàgina en Valencià"
+    "pageValencia": "Pàgina en Valencià",
+    "language": "Idioma"
 }
