--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -35,5 +35,7 @@
     "pageSpanish": "Page in Spanish",
     "pageEnglish": "Page in English",
     "pageValencia": "Page in Valencià",
-    "language": "Language"
+    "language": "Language",
+    "header": "Header",
+    "sponsors": "Sponsors"
 }
