--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -35,5 +35,7 @@
     "pageSpanish": "Página en Castellano",
     "pageEnglish": "Página en Inglés",
     "pageValencia": "Página en Valenciano",
-    "language": "Idioma"
+    "language": "Idioma",
+    "header": "Cabecera",
+    "sponsors": "Patrocinadores"
 }
