--- a/src/lang/va.json
+++ b/src/lang/va.json
@@ -35,5 +35,7 @@
     "pageSpanish": "Pàgina en Castellà",
     "pageEnglish": "Pàgina en Inglés",
     "pageValencia": "Pàgina en Valencià",
-    "language": "Idioma"
+    "language": "Idioma",
+    "header": "Capçalera",
+    "sponsors": "Patrocinadors"
 }
