--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -37,5 +37,10 @@
     "pageValencia": "Page in Valencià",
     "language": "Language",
     "header": "Header",
-    "sponsors": "Sponsors"
+    "sponsors": "Sponsors",
+    "titleAudioAdult": "Belleza's Welcome",
+    "enableSubtitle": "Enable Subtitles",
+    "disableSubtitle": "Disable Subtitles",
+    "subtitleAdult": "/assets/audio/Valencia/SceneAdult.json"
+    
 }
