--- a/src/lang/va.json
+++ b/src/lang/va.json
@@ -42,5 +42,6 @@
     "enableSubtitle": "Activar Subtítols",
     "disableSubtitle":  "Desactivar Subtítols",
     "subtitleAdult": "/assets/audio/Valencia/SceneAdult.json",
-    "subtitleKid": "/assets/audio/Valencia/SceneKid.json"
+    "subtitleKid": "/assets/audio/Valencia/SceneKid.json",
+    "subtitleScene1": "/assets/audio/Valencia/Scene1.json"
 }
