--- a/src/lang/va.json
+++ b/src/lang/va.json
@@ -43,5 +43,6 @@
     "disableSubtitle":  "Desactivar Subtítols",
     "subtitleAdult": "/assets/audio/Valencia/SceneAdult.json",
     "subtitleKid": "/assets/audio/Valencia/SceneKid.json",
-    "subtitle1": "/assets/audio/Valencia/Scene1.json"
+    "subtitle1": "/assets/audio/Valencia/Scene1.json",
+    "subtitle2": "/assets/audio/Valencia/Scene2.json"
 }
