--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -1,4 +1,6 @@
 {
+    "scenes": "Escenas",
+    "title": "Título",
     "sceneAdult" : "Lara Blázquez Pérez",
     "sceneKid" : "Xiana Ugeda Andrés",
     "descriptionAdult": "Descripción Adult Español",
@@ -41,7 +43,10 @@
     "titleAudioAdult": "Bienvenida de la belleza",
     "enableSubtitle": "Activar Subtítulos",
     "disableSubtitle": "Desactivar Subtítulos",
+    "audioControls": "Controles de audio",
+    "roleSubtitle": "Subtítulos",
     "subtitleAdult": "/assets/audio/Spanish/SceneAdult.json",
     "subtitleKid": "/assets/audio/Spanish/SceneKid.json",
-    "subtitle1": "/assets/audio/Spanish/Scene1.json"
+    "subtitle1": "/assets/audio/Spanish/Scene1.json",
+    "subtitle2": "/assets/audio/Spanish/Scene2.json"
 }
