--- a/src/lang/va.json
+++ b/src/lang/va.json
@@ -48,5 +48,6 @@
     "subtitleAdult": "/assets/audio/Valencia/SceneAdult.json",
     "subtitleKid": "/assets/audio/Valencia/SceneKid.json",
     "subtitle1": "/assets/audio/Valencia/Scene1.json",
-    "subtitle2": "/assets/audio/Valencia/Scene2.json"
+    "subtitle2": "/assets/audio/Valencia/Scene2.json",
+    "subtitle3": "/assets/audio/Valencia/Scene3.json"
 }
