--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -48,6 +48,7 @@
     "subtitleAdult": "/assets/audio/English/SceneAdult.json",
     "subtitleKid": "/assets/audio/English/SceneKid.json",
     "subtitle1": "/assets/audio/English/Scene1.json",
-    "subtitle2": "/assets/audio/English/Scene2.json"
+    "subtitle2": "/assets/audio/English/Scene2.json",
+    "subtitle3": "/assets/audio/English/Scene3.json"
     
 }
