--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -48,5 +48,6 @@
     "subtitleAdult": "/assets/audio/Spanish/SceneAdult.json",
     "subtitleKid": "/assets/audio/Spanish/SceneKid.json",
     "subtitle1": "/assets/audio/Spanish/Scene1.json",
-    "subtitle2": "/assets/audio/Spanish/Scene2.json"
+    "subtitle2": "/assets/audio/Spanish/Scene2.json",
+    "subtitle3": "/assets/audio/Spanish/Scene3.json"
 }
